--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,5 +12,12 @@
   "map": "Map Components",
   "draggable": "Draggable Components",
   "split-pane": "Split Pane",
-  "button": "Button Components"
+  "button": "Button Components",
+  "account":"Account",
+  "accountManager":"Account Manager",
+  "accountRole":"Role Manager",
+  "accountPermission":"Permission Manager",
+  "article":"Article",
+  "articleManager":"Article Manager",
+  "articleEdit":"Article Edit"
 }
